--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,11 @@
 	</head>
     <body>
       <%= render 'layouts/browsehappy' %>
-      
+
     <div class="container">
       <%= yield %>
     </div>
 
+    <%= render 'layouts/footer' %>
 	</body>
 </html>
