--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,12 @@
     <body>
       <%= render 'layouts/browsehappy' %>
 
-    <div class="container">
-      <%= yield %>
-    </div>
+      <%= render 'layouts/header' %>
+
+      <div class="container">
+        <%= yield %>
+      </div>
 
     <%= render 'layouts/footer' %>
-	</body>
+  </body>
 </html>
