--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,9 @@
       </div>
 
     <%= render 'layouts/footer' %>
+
+    <div class="container">
+      <%= debug(params) if Rails.env.development? %>
+    </div>
   </body>
 </html>
